versions/v2.8/modules/en/pages/cluster-deployment/infra-providers/azure/azure.adoc
= Creating an Azure Cluster
:revdate: 2025-03-17
:page-revdate: {revdate}

In this section, you'll learn how to install an https://rancher.com/docs/rke/latest/en/[RKE] Kubernetes cluster in Azure through Rancher.

First, you will set up your Azure cloud credentials in Rancher. Then you will use your cloud credentials to create a node template, which Rancher will use to provision new nodes in Azure.

Then you will create an Azure cluster in Rancher, and when configuring the new cluster, you will define node pools for it. Each node pool will have a Kubernetes role of etcd, controlplane, or worker. Rancher will install Kubernetes on the new nodes, and it will set up each node with the Kubernetes role defined by the node pool.

[CAUTION]
====

When the Rancher RKE cluster is running in Azure and has an Azure load balancer in front, the outbound flow will fail. The workaround for this problem is as follows:

* Terminate the SSL/TLS on the internal load balancer
* Use the L7 load balancer

For more information, refer to the documentation on https://docs.microsoft.com/en-us/azure/load-balancer/components#_limitations[Azure load balancer limitations].
====


For more information on configuring the Kubernetes cluster that Rancher will install on the Azure nodes, refer to the xref:cluster-deployment/configuration/rke1.adoc[RKE cluster configuration reference.]

For more information on configuring Azure node templates, refer to the xref:cluster-deployment/infra-providers/azure/node-template-configuration.adoc[Azure node template configuration reference.]

* <<_preparation_in_azure,Preparation in Azure>>
* <<_creating_an_azure_cluster,Creating an Azure Cluster>>

== Preparation in Azure

Before creating a node template in Rancher using a cloud infrastructure such as Azure, we must configure Rancher to allow the manipulation of resources in an Azure subscription.

To do this, we will first create a new Azure *service principal (SP)* in Azure *Active Directory (AD)*, which, in Azure, is an application user who has permission to manage Azure resources.

The following is a template `az cli` script that you have to run for creating an service principal, where you have to enter your SP name, role, and scope:

----
az ad sp create-for-rbac \
  --name="<Rancher ServicePrincipal name>" \
  --role="Contributor" \
  --scopes="/subscriptions/<subscription Id>"
----

The creation of this service principal returns three pieces of identification information, _The application ID, also called the client ID_, and _The client secret_. This information will be used when you create a node template for Azure.

== Creating an Azure Cluster

[tabs]
======
RKE::
+
--
. <<_rke_1_create_your_cloud_credentials,Create your cloud credentials>>
. <<_rke_2_create_a_node_template_with_your_cloud_credentials,Create a node template with your cloud credentials>>
. <<_rke_3_create_a_cluster_with_node_pools_using_the_node_template,Create a cluster with node pools using the node template>>

[#_rke_1_create_your_cloud_credentials]
[pass]
<h3><a class="anchor" id="_rke_1_create_your_cloud_credentials" href="#_rke_1_create_your_cloud_credentials"></a>1. Create your cloud credentials</h3>

. Click *☰ > Cluster Management*.
. Click *Cloud Credentials*.
. Click *Create*.
. Click *Azure*.
. Enter your Azure credentials.
. Click *Create*.

*Result:* You have created the cloud credentials that will be used to provision nodes in your cluster. You can reuse these credentials for other node templates, or in other clusters.

[#_rke_2_create_a_node_template_with_your_cloud_credentials]
[pass]
<h3><a class="anchor" id="_rke_2_create_a_node_template_with_your_cloud_credentials" href="#_rke_2_create_a_node_template_with_your_cloud_credentials"></a>2. Create a node template with your cloud credentials</h3>

Creating a xref:cluster-deployment/infra-providers/infra-providers.adoc#_node_templates[node template] for Azure will allow Rancher to provision new nodes in Azure. Node templates can be reused for other clusters.

. Click *☰ > Cluster Management*.
. Click menu:RKE1 Configuration[Node Templates].
. Click *Add Template*.
. Click *Azure*.
. Fill out a node template for Azure. For help filling out the form, refer to xref:cluster-deployment/infra-providers/azure/node-template-configuration.adoc[Azure Node Template Configuration.]

[#_rke_3_create_a_cluster_with_node_pools_using_the_node_template]
[pass]
<h3><a class="anchor" id="_rke_3_create_a_cluster_with_node_pools_using_the_node_template" href="#_rke_3_create_a_cluster_with_node_pools_using_the_node_template"></a>3. Create a cluster with node pools using the node template</h3>

Use Rancher to create a Kubernetes cluster in Azure.

. Click *☰ > Cluster Management*.
. On the *Clusters* page, click *Create*.
. Click *Azure*.
. Enter a *Cluster Name*.
. Add one or more node pools to your cluster. Each node pool uses a node template to provision new nodes. For more information about node pools, including best practices, see xref:cluster-deployment/infra-providers/infra-providers.adoc[this section.]
. In the *Cluster Configuration* to choose the version of Kubernetes that will be installed, what network provider will be used and if you want to enable project network isolation. To see more cluster options, click on *Show advanced options*. For help configuring the cluster, refer to the xref:cluster-deployment/configuration/rke1.adoc[RKE cluster configuration reference.]
. Use *Member Roles* to configure user authorization for the cluster. Click *Add Member* to add users that can access the cluster. Use the *Role* drop-down to set permissions for each user.
. Click *Create*.
--

RKE2::
+
--
[#_rke2_1_create_your_cloud_credentials]
[pass]
<h3><a class="anchor" id="_rke2_1_create_your_cloud_credentials" href="#_rke2_1_create_your_cloud_credentials"></a>1. Create your cloud credentials</h3>

If you already have a set of cloud credentials to use, skip this section.

. Click *☰ > Cluster Management*.
. Click *Cloud Credentials*.
. Click *Create*.
. Click *Azure*.
. Enter your Azure credentials.
. Click *Create*.

*Result:* You have created the cloud credentials that will be used to provision nodes in your cluster. You can reuse these credentials for other node templates, or in other clusters.

[#_2_create_your_cluster]
[pass]
<h3><a class="anchor" id="_2_create_your_cluster" href="#_2_create_your_cluster"></a>2. Create your cluster</h3>

Use Rancher to create a Kubernetes cluster in Azure.

. Click *☰ > Cluster Management*.
. On the *Clusters* page, click *Create*.
. Toggle the switch to *RKE2/K3s*.
. Click *Azure*.
. Select a *Cloud Credential*, if more than one exists. Otherwise, it's preselected.
. Enter a *Cluster Name*.
. Create a machine pool for each Kubernetes role. Refer to the xref:cluster-deployment/infra-providers/infra-providers.adoc#_node_roles[best practices] for recommendations on role assignments and counts.
 .. For each machine pool, define the machine configuration. Refer to the xref:cluster-deployment/infra-providers/azure/machine-configuration.adoc[Azure machine configuration reference] for information on configuration options.
. Use the *Cluster Configuration* to choose the version of Kubernetes that will be installed, what network provider will be used and if you want to enable project network isolation.  For help configuring the cluster, refer to the xref:cluster-deployment/configuration/rke2.adoc[RKE2 cluster configuration reference.]
. Use *Member Roles* to configure user authorization for the cluster. Click *Add Member* to add users that can access the cluster. Use the *Role* drop-down to set permissions for each user.
. Click *Create*.
--
======

*Result:*

Your cluster is created and assigned a state of *Provisioning*. Rancher is standing up your cluster.

You can access your cluster after its state is updated to *Active*.

*Active* clusters are assigned two Projects:

* `Default`, containing the `default` namespace
* `System`, containing the `cattle-system`, `ingress-nginx`, `kube-public`, and `kube-system` namespaces

=== Optional Next Steps

After creating your cluster, you can access it through the Rancher UI. As a best practice, we recommend setting up these alternate ways of accessing your cluster:

* *Access your cluster with the kubectl CLI:* Follow xref:cluster-admin/manage-clusters/access-clusters/use-kubectl-and-kubeconfig.adoc#_accessing_clusters_with_kubectl_from_your_workstation[these steps] to access clusters with kubectl on your workstation. In this case, you will be authenticated through the Rancher server's authentication proxy, then Rancher will connect you to the downstream cluster. This method lets you manage the cluster without the Rancher UI.
* *Access your cluster with the kubectl CLI, using the authorized cluster endpoint:* Follow xref:cluster-admin/manage-clusters/access-clusters/use-kubectl-and-kubeconfig.adoc#_authenticating_directly_with_a_downstream_cluster[these steps] to access your cluster with kubectl directly, without authenticating through Rancher. We recommend setting up this alternative method to access your cluster so that in case you can't connect to Rancher, you can still access the cluster.
